# Computergrafik

./: .gitignore  CMakeLists.txt  README.md  readme.txt
assignment/: CMakeLists.txt  readme.txt
assignment/data_out/: stochastic_00.txt  stochastic_01.txt  stochastic_02.txt
assignment/lib/Jzon/: Jzon.h
assignment/lib/glew/: CMakeLists.txt
assignment/scenes/: nayar.tga  phong.tga
assignment/scenes/spheres/: spheres.sce
assignment/scripts_win/: run_perlin_1d.bat
assignment/shaders/: phong_shadow.frag  shadowmap_gen.vert
assignment/src/: CMakeLists.txt  Material.h  Mesh.cpp  Scene.cpp  ShadowViewer.cpp  earth.frag  earth.vert  lsystem.cpp  main.cpp  main_shader_viewer.cpp  main_terrain.cpp  phong.frag  phong.vert  solar_viewer.cpp  texture.cpp
assignment/src/render/: Mesh.cpp
assignment/src/utils/: LSystemViewer.h
assignment_00/: .README.md.swp
assignment_00/scenes/solid_color/: solid_color.sce
assignment_00/src/: CMakeCache.txt
assignment_01/: README.md
assignment_01/src/: Cylinder.cpp  Scene.cpp  Sphere.cpp
assignment_02/src/: CMakeLists.txt  Cylinder.cpp  Plane.cpp  Scene.cpp
scripts_win/: terrain.bat
src/shaders/: noise.frag  terrain.frag
