cmake_minimum_required(VERSION 3.29)
project(Computergrafik)

set(CMAKE_CXX_STANDARD 14)

include_directories(assignment_02/src)

add_executable(Computergrafik
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/a.exe
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/CMakeDetermineCompilerABI_CXX.bin
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/Cylinder.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/libcommon.a
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/Mesh.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/objects.a
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/ompver_CXX.bin
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/Plane.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/raytrace.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/raytrace.exe
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/Scene.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/shelved.patch
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/Sphere.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]/vec3.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/a.exe
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/CMakeDetermineCompilerABI_CXX.bin
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/Cylinder.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/libcommon.a
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/Mesh.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/objects.a
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/ompver_CXX.bin
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/Plane.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/raytrace.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/raytrace.exe
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/Scene.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/shelved.patch
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/Sphere.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03_[Changes]1/vec3.cpp.obj
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03__Changes_.xml
        assignment_02/.idea/shelf/Uncommitted_changes_before_Checkout_at_08_10_2024_10_03__Changes_1.xml
        assignment_02/.idea/.gitignore
        assignment_02/.idea/.name
        assignment_02/.idea/assignment_02.iml
        assignment_02/.idea/editor.xml
        assignment_02/.idea/misc.xml
        assignment_02/.idea/modules.xml
        assignment_02/.idea/vcs.xml
        assignment_02/.idea/workspace.xml
        assignment_02/cmake-build-debug/.cmake/api/v1/query/cache-v2
        assignment_02/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
        assignment_02/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
        assignment_02/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
        assignment_02/cmake-build-debug/.cmake/api/v1/reply/cache-v2-5554ca63c3087f691915.json
        assignment_02/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-7924103c5cfe434abf9e.json
        assignment_02/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-5c4a9538f8c7983d1b8a.json
        assignment_02/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
        assignment_02/cmake-build-debug/.cmake/api/v1/reply/directory-src-Debug-b6cf2213fc5053b67c22.json
        assignment_02/cmake-build-debug/.cmake/api/v1/reply/index-2024-10-08T07-37-41-0910.json
        assignment_02/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-484ee006d7b0fae39e6a.json
        assignment_02/cmake-build-debug/src/cmake_install.cmake
        assignment_02/cmake-build-debug/src/libcommon.a
        assignment_02/cmake-build-debug/Testing/Temporary/LastTest.log
        assignment_02/cmake-build-debug/.ninja_deps
        assignment_02/cmake-build-debug/.ninja_log
        assignment_02/cmake-build-debug/build.ninja
        assignment_02/cmake-build-debug/cmake_install.cmake
        assignment_02/cmake-build-debug/CMakeCache.txt
        assignment_02/cmake-build-debug/combo.tga
        assignment_02/cmake-build-debug/cube.tga
        assignment_02/cmake-build-debug/cylinders.tga
        assignment_02/cmake-build-debug/debug_aabb
        assignment_02/cmake-build-debug/mask.tga
        assignment_02/cmake-build-debug/mirror.tga
        assignment_02/cmake-build-debug/molecule.tga
        assignment_02/cmake-build-debug/molecule2.tga
        assignment_02/cmake-build-debug/office.tga
        assignment_02/cmake-build-debug/output.tga
        assignment_02/cmake-build-debug/raytrace
        assignment_02/cmake-build-debug/rings.tga
        assignment_02/cmake-build-debug/spheres.tga
        assignment_02/cmake-build-debug/toon_faces.tga
        assignment_02/expected_results/combo.png
        assignment_02/expected_results/cube.png
        assignment_02/expected_results/cylinders.png
        assignment_02/expected_results/debug_aabb_mask.png
        assignment_02/expected_results/debug_aabb_office.png
        assignment_02/expected_results/debug_aabb_rings.png
        assignment_02/expected_results/debug_aabb_toon_faces.png
        assignment_02/expected_results/mask.png
        assignment_02/expected_results/mirror.png
        assignment_02/expected_results/molecule.png
        assignment_02/expected_results/molecule2.png
        assignment_02/expected_results/office.png
        assignment_02/expected_results/rings.png
        assignment_02/expected_results/spheres.png
        assignment_02/expected_results/toon_faces.png
        assignment_02/scenes/combo/combo.sce
        assignment_02/scenes/cube/cube.off
        assignment_02/scenes/cube/cube.sce
        assignment_02/scenes/cylinders/cylinders.sce
        assignment_02/scenes/mask/mask.off
        assignment_02/scenes/mask/mask.sce
        assignment_02/scenes/mirror/mirror.sce
        assignment_02/scenes/molecule/molecule.sce
        assignment_02/scenes/molecule2/molecule2.sce
        assignment_02/scenes/movie/gen_movie.sh
        assignment_02/scenes/office/boden.off
        assignment_02/scenes/office/fenster.off
        assignment_02/scenes/office/glas.off
        assignment_02/scenes/office/griffe.off
        assignment_02/scenes/office/heizung.off
        assignment_02/scenes/office/office.sce
        assignment_02/scenes/office/saeulen.off
        assignment_02/scenes/office/schraenke.off
        assignment_02/scenes/office/stuhl_beine.off
        assignment_02/scenes/office/stuhl_polster.off
        assignment_02/scenes/office/tisch.off
        assignment_02/scenes/office/tisch_beine.off
        assignment_02/scenes/office/wand.off
        assignment_02/scenes/rings/ring1.off
        assignment_02/scenes/rings/ring2.off
        assignment_02/scenes/rings/rings.sce
        assignment_02/scenes/solid_color/solid_color.sce
        assignment_02/scenes/spheres/spheres.sce
        assignment_02/scenes/toon_faces/confused.off
        assignment_02/scenes/toon_faces/kiss.off
        assignment_02/scenes/toon_faces/neutral.off
        assignment_02/scenes/toon_faces/puff.off
        assignment_02/scenes/toon_faces/sad.off
        assignment_02/scenes/toon_faces/smile.off
        assignment_02/scenes/toon_faces/toon_faces.sce
        assignment_02/src/Camera.h
        assignment_02/src/CMakeLists.txt
        assignment_02/src/Cylinder.cpp
        assignment_02/src/Cylinder.h
        assignment_02/src/debug_aabb.cpp
        assignment_02/src/Image.h
        assignment_02/src/Light.h
        assignment_02/src/Material.h
        assignment_02/src/Mesh.cpp
        assignment_02/src/Mesh.h
        assignment_02/src/Object.h
        assignment_02/src/Plane.cpp
        assignment_02/src/Plane.h
        assignment_02/src/Ray.h
        assignment_02/src/raytrace.cpp
        assignment_02/src/Scene.cpp
        assignment_02/src/Scene.h
        assignment_02/src/SolveQuadratic.h
        assignment_02/src/Sphere.cpp
        assignment_02/src/Sphere.h
        assignment_02/src/StopWatch.h
        assignment_02/src/vec3.cpp
        assignment_02/src/vec3.h
        assignment_02/CMakeLists.txt
        assignment_02/Doxyfile.in
        assignment_02/README.md)
